<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_clientes"
        android:icon="@drawable/clients"
        android:title="Clientes" />
    
    <item
        android:id="@+id/nav_inventario"
        android:icon="@drawable/inventario"
        android:title="Inventario" />
    
    <item
        android:id="@+id/nav_rutas"
        android:icon="@drawable/rutas"
        android:title="Rutas" />
    
    <item
        android:id="@+id/nav_pedidos"
        android:icon="@drawable/pedidos"
        android:title="Pedidos" />
</menu>
