...
                android:textColor="#1A1A1A"
                android:textSize="16sp"
                android:textStyle="normal"
                tools:text="Producto" />

            <TextView
                android:id="@+id/stock_producto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/md_theme_light_primary"
...
